--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,9 +1,29 @@
 * {
+    box-sizing: border-box;
     font-family: Helvetica, Arial, sans-serif;
     margin: 0px;
 }
 
-html, body {
+.absolute {
+    position: absolute;
+}
+
+.center-vertical-horizontal-absolute {
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    right: 0;
+    top: 0;
+}
+
+.grid-layaout {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 100vh;
+}
+
+html, body, #root {
     height: 100vh;
     width: 100vw;
 }
@@ -12,6 +32,20 @@ main {
     width: 100%;
 }
 
+.object-fit {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
 .pointer {
     cursor: pointer;
+}
+
+.relative {
+    position: relative;
 }
