Basic structure of Login

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -32,6 +32,22 @@ main {
     width: 100%;
 }
 
+.mt-input {
+    margin-top: 10px;
+}
+
+.mt-primary {
+    margin-top: 80px;
+}
+
+.mt-secondary {
+    margin-top: 40px;
+}
+
+.mt-third {
+    margin-top: 20px;
+}
+
 .object-fit {
     height: 100%;
     object-fit: cover;
