--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,7 @@
 
 // Components
 @import './components/background-aside';
+@import './components/login';
+@import './components/buttons';
+@import './components/links';
+@import './components/inputs';
