--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 
 // Components
 @import './components/background-aside';
+@import './components/mixins';
 @import './components/login';
 @import './components/buttons';
 @import './components/links';
