Simulation of user authentication by web and localstorage

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -16,6 +16,18 @@
     top: 0;
 }
 
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.align-center-right {
+    align-items: end;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
 .grid-layaout {
     display: grid;
     gap: 20px;
