--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,5 @@
 @import './components/buttons';
 @import './components/links';
 @import './components/inputs';
+@import './components/navbar';
+@import './components/dashboard';
