Component structure Dashboard.js

--- a/src/styles/components/_background-aside.scss
+++ b/src/styles/components/_background-aside.scss
@@ -1,7 +1,9 @@
 .logo-aside {
     display: none;
-    left: 5em;
+    height: 85px;
+    left: 20%;
     top: 30px;
+    width: 111px;
 }
 
 .size-image-pizza {
