--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,7 @@
 @import './components/inputs';
 @import './components/navbar';
 @import './components/dashboard';
+@import './components/route';
+@import './components/title-page';
+@import './components/description-page';
+@import './components/footer';
