--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,6 +4,18 @@
     margin: 0px;
 }
 
+.align-center {
+    align-items: center;
+    display: flex;
+}
+
+.align-center-right {
+    align-items: end;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
 .absolute {
     position: absolute;
 }
@@ -21,12 +33,6 @@
     flex-direction: column;
 }
 
-.align-center-right {
-    align-items: end;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-}
 
 .grid-layaout {
     display: grid;
@@ -55,6 +61,11 @@ html, body, #root {
 .img-responsive {
     max-width: 100%;
     height: auto;
+}
+
+.justify-center {
+    display: flex;
+    justify-content: center;
 }
 
 main {
@@ -91,10 +102,23 @@ main {
     overflow: hidden;
 }
 
+.p-third {
+    padding: 20px;
+}
+
 .pointer {
     cursor: pointer;
 }
 
 .relative {
     position: relative;
+}
+
+.space-between {
+    display: flex;
+    justify-content: space-between;
+}
+
+.scroll-y {
+    overflow-y: auto;
 }
