--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,11 +2,26 @@ footer {
     background-color: $color-secondary;
     bottom: 0px;
     height: 60px;
-    left: 30%;
+    left: 0;
     padding-right: 80px;
     padding-left: 50px;
-    position: absolute;
-    width: 70%;
+    position: fixed;
+    width: 100%;
+
+    @media (min-width: $breakpoint-landscape-phone) and (orientation: landscape) { 
+        left: 30%;
+        width: 70%;
+    }
+
+    @media (min-width: $breakpoint-tablet) and (orientation: portrait) {
+        left: 47%;
+        width: 63%;
+    }
+
+    @media (min-width: $breakpoint-landscape-tablet) and (orientation: landscape) { 
+        left: 47%;
+        width: 63%;
+}
 }
 
 .footer__icons {
