--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,5 @@
 @import './components/title-page';
 @import './components/description-page';
 @import './components/footer';
+@import './components/modal-carrousel';
+@import './components/pizzas';
