--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -10,4 +10,5 @@ $breakpoint-desktop: 992px;
 $breakpoint-landscape-phone: 640px;
 $breakpoint-landscape-tablet: 1000px;
 $breakpoint-large: 1200px;
+$breakpoint-landscape-large: 1200px;
 $breakpoint-tablet: 768px;
