--- a/src/styles/components/_modal-carrousel.scss
+++ b/src/styles/components/_modal-carrousel.scss
@@ -26,6 +26,14 @@
     position: absolute;
     width: 75%;
     z-index: 60;
+    
+    @media (orientation: landscape) {
+        height: 90%;
+    }
+
+    @media (min-width: $breakpoint-tablet) and (orientation: portrait) {
+        height: 70%;
+    }
 }
 
 .container__modal-body {
@@ -34,7 +42,6 @@
     min-height: 100px;
     margin-top: 15px;
     margin-bottom: 20px;
-    overflow-y: auto;
     width: 100%;
 }
 
@@ -55,6 +62,12 @@
 .container__modal-header-title {
     @include truncate-one-line;
     color: $color-secondary;
+}
+
+.container__modal-scroll {
+    max-height: 100%;
+    overflow-y: auto;
+    padding-right: 10px;
 }
 
 .modal-body__text-description {
